--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Menú</title>
+	<main>
 	<style >
 		body { background-color: #a29bfe; padding: 150px;font-family: Arial; }
 		#menu{
