--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 		<ul>
 				<li><a href="DISNEY+/index.html">Disney+</a></li>
 				<li><a href="TWITTER/index.html">Twitter</a></li>
-				<li><a href="CINE / index.html">Flexbox</a></li>
-				<li><a href="CONCIERTOS / index.html">Conciertos</a></li>
-				<li><a href="CALCULADORA / index.html">Calculadora</a></li>
-				<li><a href="TIENDA / index.html">Tienda</a></li>
-				<li><a href="AGENDA (LS) / index.html">Agenda</a></li>
+				<li><a href="CINE/index.html">Flexbox</a></li>
+				<li><a href="CONCIERTOS/index.html">Conciertos</a></li>
+				<li><a href="CALCULADORA/index.html">Calculadora</a></li>
+				<li><a href="TIENDA/index.html">Tienda</a></li>
+				<li><a href="AGENDA (LS)/AGENDA/index.html">Agenda</a></li>
 		</ul>
 	</div>
 	<br>
